[gd_scene load_steps=22 format=3 uid="uid://bte6pgtr0jyke"]

[ext_resource type="Script" path="res://scenes_3d/stages/scripts/tutorial_stage.gd" id="1_2wut6"]
[ext_resource type="PackedScene" uid="uid://i1a30b5te2tx" path="res://scenes_3d/terrains/terrain.scn" id="2_n0qyl"]
[ext_resource type="PackedScene" uid="uid://c2ei4y2mis8hk" path="res://scenes_3d/trees/palm_tree.scn" id="3_bu10x"]
[ext_resource type="Material" uid="uid://cddy1otapyrq5" path="res://materials/green-terrain.material" id="3_ruc26"]
[ext_resource type="PackedScene" uid="uid://doyct1xu46gwj" path="res://scenes_2d/hud/gem_pouch.tscn" id="4_ljqtt"]
[ext_resource type="PackedScene" uid="uid://pg510dfugg1q" path="res://scenes_3d/camera/camera_pivot.tscn" id="5_5did4"]
[ext_resource type="PackedScene" uid="uid://b7p0q017021lq" path="res://scenes_3d/village/crib.scn" id="6_g7m6h"]
[ext_resource type="AudioStream" uid="uid://cjir8clf8m3u6" path="res://music/tune_no_1.wav" id="8_mhn8w"]
[ext_resource type="PackedScene" uid="uid://bsmsv2m50sjob" path="res://scenes_3d/monster_spawner/monster_spawner.tscn" id="9_6s5h6"]
[ext_resource type="PackedScene" uid="uid://c78vb4eh3m7iq" path="res://scenes_3d/monster_spawner/monster_path.tscn" id="10_ue4va"]
[ext_resource type="PackedScene" uid="uid://odupfjlid8iv" path="res://scenes_3d/monster_spawner/anchor.tscn" id="11_4urpg"]
[ext_resource type="PackedScene" uid="uid://crjgde67usrmn" path="res://scenes_3d/monster_spawner/monster_wave.tscn" id="12_7umqb"]
[ext_resource type="Script" path="res://scenes_3d/stages/scripts/end_tutorial_confirmation_dialog.gd" id="13_mip6f"]
[ext_resource type="FontFile" uid="uid://b8pvc0etwwo81" path="res://fonts/DeltaBlock-2Oee3.ttf" id="14_3bqw1"]
[ext_resource type="PackedScene" uid="uid://s6gmto1dt28h" path="res://scenes_2d/checklist/ChecklistItem.tscn" id="14_pn5o8"]
[ext_resource type="PackedScene" uid="uid://cp46skoyrt7a0" path="res://scenes_2d/hud/explanation_text.tscn" id="16_xtmyw"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_oyhy0"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_ylqb4"]
sky_material = SubResource("ProceduralSkyMaterial_oyhy0")

[sub_resource type="Environment" id="Environment_4lvlr"]
background_mode = 2
sky = SubResource("Sky_ylqb4")
tonemap_mode = 2

[sub_resource type="Curve3D" id="Curve3D_33v1q"]
resource_local_to_scene = true

[sub_resource type="LabelSettings" id="LabelSettings_8vmqk"]
font = ExtResource("14_3bqw1")
font_size = 24

[node name="TutorialStage" type="Node"]
script = ExtResource("1_2wut6")
metadata/_edit_horizontal_guides_ = [97.0, 128.0, 160.0, 192.0]
metadata/_edit_vertical_guides_ = [20.0]

[node name="terrain" parent="." instance=ExtResource("2_n0qyl")]

[node name="Landscape" parent="terrain" index="0"]
surface_material_override/0 = ExtResource("3_ruc26")

[node name="GemPouch" parent="." instance=ExtResource("4_ljqtt")]
visible = false
builder_gems = 0
metadata/_edit_vertical_guides_ = [168.0, 224.0]
metadata/_edit_horizontal_guides_ = [64.0, 128.0, 196.0]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4lvlr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.25, 0, 0.499998, 0.866027, -0.500003, 0.75, -0.43301, 13.7142, 4.51649, -21.5665)
light_energy = 2.0
shadow_enabled = true

[node name="CameraPivot" parent="." instance=ExtResource("5_5did4")]

[node name="MyCamera" parent="CameraPivot" index="0"]
current = false

[node name="crib" parent="." instance=ExtResource("6_g7m6h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.78945, 0.653944, -1.80743)

[node name="crib2" parent="." instance=ExtResource("6_g7m6h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.492465, 1.01403, -3.01857)

[node name="crib3" parent="." instance=ExtResource("6_g7m6h")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.90456, 0.404646, 1.60974)

[node name="palm-tree6" parent="." instance=ExtResource("3_bu10x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.04664, 0.000112029, -2.07571)

[node name="palm-tree11" parent="." instance=ExtResource("3_bu10x")]
transform = Transform3D(0.616413, 0, 0, 0, 0.616413, 0, 0, 0, 0.616413, 7.34609, 0.0228954, -5.25948)

[node name="palm-tree3" parent="." instance=ExtResource("3_bu10x")]
transform = Transform3D(0.555821, 0, -0.23099, 0, 0.601908, 0, 0.23099, 0, 0.555821, 10.6344, 0.00156252, -0.276462)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mhn8w")
volume_db = -20.0
autoplay = true

[node name="MonsterSpawner" parent="." instance=ExtResource("9_6s5h6")]

[node name="MonsterPath" parent="MonsterSpawner" instance=ExtResource("10_ue4va")]
curve = SubResource("Curve3D_33v1q")

[node name="Anchor" parent="MonsterSpawner/MonsterPath" instance=ExtResource("11_4urpg")]
transform = Transform3D(0.418519, 0, 0, 0, 0.418519, 0, 0, 0, 0.476559, 14.9261, 0.217118, 10.9823)

[node name="Anchor3" parent="MonsterSpawner/MonsterPath" instance=ExtResource("11_4urpg")]
transform = Transform3D(0.418519, 0, 0, 0, 0.418519, 0, 0, 0, 0.476559, 14.604, 0.209667, 4.26752)

[node name="Anchor2" parent="MonsterSpawner/MonsterPath" instance=ExtResource("11_4urpg")]
transform = Transform3D(0.418519, 0, 0, 0, 0.418519, 0, 0, 0, 0.476559, 0, 0.731246, 0)

[node name="MonsterWave" parent="MonsterSpawner" instance=ExtResource("12_7umqb")]
wait_time = 3.0
wave_number = 2
monster_count = 2
monster_speed = 2.0
monster_hp = 1

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
process_mode = 2
title = "End tutorial"
initial_position = 1
size = Vector2i(417, 100)
dialog_text = "Do you want to end the tutorial and start the game?"
dialog_close_on_escape = false
script = ExtResource("13_mip6f")

[node name="EndTutorialDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="KeyboardTutorial" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 8.0
offset_top = 8.0
offset_right = 458.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="KeyboardTutorial"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 252.0
offset_bottom = 43.0
text = "Basic Controls"
label_settings = SubResource("LabelSettings_8vmqk")

[node name="CheckRunning" parent="KeyboardTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 68.0
offset_right = 443.0
offset_bottom = 88.0
text = "RUN around using 'W', 'A', 'S' and 'D' or the Arrow-keys"
informative_text = "You can RUN using 'w', 'a', 's' and 'd' or the Arrow-keys"

[node name="CheckJumping" parent="KeyboardTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 100.0
offset_right = 443.0
offset_bottom = 120.0
text = "JUMP by pressing the SPACEBAR"
informative_text = "You can JUMP by pressing the spacebar"

[node name="CheckZooming" parent="KeyboardTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 132.0
offset_right = 435.0
offset_bottom = 152.0
text = "ZOOM in and out by using the MOUSEWHEEL"
informative_text = "To ZOOM,  click and drag MOUSEWHEEL up and down (or scroll)"

[node name="CheckLooking" parent="KeyboardTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 164.0
offset_right = 435.0
offset_bottom = 184.0
text = "LOOK AROUND by clicking + dragging the MOUSEWHEEL"
informative_text = "To LOOK AROUND, click and drag MOUSEWHEEL left and right"

[node name="GamepadTutorial" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 8.0
offset_top = 8.0
offset_right = 458.0
offset_bottom = 212.0

[node name="Label" type="Label" parent="GamepadTutorial"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 252.0
offset_bottom = 43.0
text = "Basic Controls"
label_settings = SubResource("LabelSettings_8vmqk")

[node name="CheckRunning" parent="GamepadTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 68.0
offset_right = 443.0
offset_bottom = 88.0
text = "RUN around using the L-stick"
informative_text = "To RUN, use L-stick of your gamepad"

[node name="CheckJumping" parent="GamepadTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 100.0
offset_right = 443.0
offset_bottom = 120.0
text = "JUMP by pressing A - (B on the Pro Controller)"
informative_text = "JUMP by pressing A - (B on the Pro Controller)"

[node name="CheckZooming" parent="GamepadTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 132.0
offset_right = 435.0
offset_bottom = 152.0
text = "ZOOM in and out by moving the R-stick up and down"
informative_text = "To ZOOM in and out move the R-stick up and down"

[node name="CheckLooking" parent="GamepadTutorial" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 164.0
offset_right = 435.0
offset_bottom = 184.0
text = "LOOK AROUND by moving the R-stick left and right"
informative_text = "LOOK AROUND by moving the R-stick left and right"

[node name="KeyboardTutuorialGameplay" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 8.0
offset_top = 8.0
offset_right = 456.0
offset_bottom = 240.0

[node name="Title" type="Label" parent="KeyboardTutuorialGameplay"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 109.0
offset_bottom = 43.0
text = "Gameplay"
label_settings = SubResource("LabelSettings_8vmqk")

[node name="CheckTreeHugging" parent="KeyboardTutuorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 69.0
offset_right = 435.0
offset_bottom = 89.0
text = "Stand close to a TREE to highlight it"
informative_text = "Stand close to a TREE so you can open a OPEN MENU"

[node name="CheckMenuOpen" parent="KeyboardTutuorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 100.0
offset_right = 435.0
offset_bottom = 120.0
text = "OPEN the BUILD MENU by clicking LEFT MOUSE button"
informative_text = "Click LEFT MOUSE button next to a tree to OPEN MENU"

[node name="CheckSubmenu" parent="KeyboardTutuorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 132.0
offset_right = 435.0
offset_bottom = 152.0
text = "Click on a TOWER TYPE to open the TOWER SUBMENU"
informative_text = "Click on a TOWER TYPE to open the TOWER SUBMENU"

[node name="CheckCancel" parent="KeyboardTutuorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 164.0
offset_right = 435.0
offset_bottom = 184.0
text = "Click RIGHT MOUSE button to close MENUS + SUBMENUS"
informative_text = "Click RIGHT MOUSE button to close MENUS + SUBMENUS"

[node name="GamepadTutorialGameplay" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = 8.0
offset_top = 8.0
offset_right = 456.0
offset_bottom = 240.0

[node name="Title" type="Label" parent="GamepadTutorialGameplay"]
layout_mode = 0
offset_left = 8.0
offset_top = 16.0
offset_right = 109.0
offset_bottom = 43.0
text = "Gameplay"
label_settings = SubResource("LabelSettings_8vmqk")

[node name="CheckTreeHugging" parent="GamepadTutorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 69.0
offset_right = 435.0
offset_bottom = 89.0
text = "Stand close to a TREE to highlight it"
informative_text = "Stand close to a TREE so you can open a OPEN MENU"

[node name="CheckMenuOpen" parent="GamepadTutorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 100.0
offset_right = 435.0
offset_bottom = 120.0
text = "OPEN the BUILD MENU by pressing B - (Nintendo: A)"
informative_text = "Press B (Nintendo: A) next to a tree to OPEN MENU"

[node name="CheckSubmenu" parent="GamepadTutorialGameplay" instance=ExtResource("14_pn5o8")]
layout_mode = 0
offset_left = 12.0
offset_top = 132.0
offset_right = 435.0
offset_bottom = 152.0
text = "Point at a TOWER TYPE and press B to open SUBMENU"
informative_text = "Point at a TOWER TYPE and press B to open SUBMENU"

[node name="CheckCancel" parent="GamepadTutorialGameplay" instance=ExtResource("14_pn5o8")]
offset_left = 12.0
offset_top = 164.0
offset_right = 435.0
offset_bottom = 184.0
text = "Press A to close MENUS + SUBMENUS - (Nintendo: B)"
informative_text = "Press A to close MENUS + SUBMENUS - (Nintendo: B)"

[node name="ExplanationText" parent="." instance=ExtResource("16_xtmyw")]
z_index = 5

[node name="Body" parent="ExplanationText" index="1"]
text = "Goblins vs. Fishfolk is a \"Tower Defense\" game inspired by Pixeljunk's Monsters 2.

The goal of a \"tower defense\" is to protect your base by building towers.  In this game you will be converting trees into towers to protect  babies.
"

[connection signal="gameover" from="." to="." method="_on_gameover"]
[connection signal="open_pause_menu" from="." to="." method="_open_confirmation_dialog"]
[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="timeout" from="EndTutorialDelay" to="." method="_on_confirmation_dialog_confirmed"]

[editable path="terrain"]
[editable path="CameraPivot"]
[editable path="ExplanationText"]
